[tool.poetry]
name = "ml-algorithms"
version = "0.1.0"
description = "Implementing Common ML Algorithms in Python"
authors = ["brightmaraba <brightkoech@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
